# entidy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml
benchmark/: CMakeLists.txt  macro.cpp  micro.cpp
examples/: CMakeLists.txt  main.cpp
examples/General/: main.cpp
examples/SpaceInvaders/: Console.h  main.cpp
examples/SpaceInvaders/include/: Components.h  Console.h  Engine.h  Helper.h  SpriteFactory.h
examples/SpaceInvaders/include/Systems/: SBackground.h  SEnemy.h  SInput.h  SMovement.h  SPlayer.h  SRendering.h
examples/SpaceInvaders/src/: main.cpp
examples/SpaceInvaders/src/Systems/: SBackground.cpp  SEnemy.cpp  SInput.cpp  SMovement.cpp  SPlayer.cpp  SRendering.cpp
include/entidy/: Entidy.h  Entity.h  Exception.h  Indexer.h  Iterator.h  MemoryManager.h  PagedVector.h  QPAdapter.h  Query.h  QueryParser.h  Registry.h  SparseMap.h  SparseVector.h  View.h  roaring.h  roaring.hh
include/entidy/CRoaring/: roaring.hh
include/entidy/Indexer/: Indexer.h  Iterator.h  QueryParser.h  SparseMap.h
include/entidy/MemoryManager/: MemoryManager.h  MemoryPool.h
src/: Entity.cpp  Query.cpp  Registry.cpp  roaring.c
